# insurance-manager

./: .env.example  .gitignore  GUIA_INSTALACAO.md  README.md  pyproject.toml
insurance_manager/: __init__.py  config.py  models.py
insurance_manager/api/: main.py
insurance_manager/services/: email_service.py  pdf_processor.py  telegram_service.py
